@@ -33,6 +33,7 @@ Project Leader / Developer:
 - Cédric Krier
 - Phil Jones
 - Michael Hunsinger
+- Lars Holm Nielsen
 
 Contributors of code for werkzeug/examples are:
 
